--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -198,13 +198,13 @@ Findings based on nonparametric MLEs and Bayesian posterior means were highly \\
 
 \section{Conclusion}
 
-Herein, the DNA barcode gap is analyzed from a rigorous statistical lens to accelerate molecular biodiversity assessment. Since the DNA barcode gap metrics often attain values very close to zero (suggesting no overlap and complete separation of pairwise genetic distance distributions) and/or very near one (indicating no separation and complete overlap), in addition to more intermediate values, a noninformative Beta($\frac{1}{2}, \frac{1}{2}$) prior may be more appropriate over complete ignorance imposed by a Beta(1, 1) prior. The former distribution is U-shaped symmetric and places greater probability density at the extremes of the distribution due to its heavier tails, while still allowing for variability in parameter estimates within intermediate values along its domain. Note that this prior is Jeffreys' prior, which is proportional to the square root of the Fisher information $\mathcal{I}(p)$. That is
+Herein, the accuracy of the DNA barcode gap is analyzed from a rigorous statistical lens to accelerate molecular biodiversity assessment. Since the DNA barcode gap metrics often attain values very close to zero (suggesting no overlap and complete separation of pairwise genetic distance distributions) and/or very near one (indicating no separation and complete overlap), in addition to more intermediate values, a noninformative Beta($\frac{1}{2}, \frac{1}{2}$) prior may be more appropriate over complete ignorance imposed by a Beta(1, 1) prior. The former distribution is U-shaped symmetric and places greater probability density at the extremes of the distribution due to its heavier tails, while still allowing for variability in parameter estimates within intermediate values along its domain. Note that this prior is Jeffreys' prior density \citep{jeffreys1946invariant}, which is  proportional to the square root of the Fisher information $\mathcal{I}(p)$. That is
 
 \begin{equation}
 \pi(p) \propto \sqrt{p(1-p)}
 \end{equation}
 
-\noindent where $p$ is the population proportion. Equation (16) has several desirable statistical \\ properties as a prior, most notably that it is inversely propotional to the standard deviation of the binomial distribution, and is invariant to model reparameterization. However, this prior can lead to divergent transitions, among other pathologies, imposed by complex \\ geometry (\textit{i.e.}, curvature) in the posterior space; thus, remedies to resolve them, such as lowering the step size of the HMC/NUTS sampler, should be attempted in future work. 
+\noindent where $p$ is the population proportion. Equation (16) has several desirable statistical \\ properties as a prior, most notably that it is inversely proportional to the standard deviation of the binomial distribution, and is invariant to model reparameterization \citep{gelman2014bayesian}. However, this prior can lead to divergent transitions, among other pathologies, imposed by complex geometry (\textit{i.e.}, curvature) in the posterior space; thus, remedies to resolve them, such as lowering the step size of the HMC/NUTS sampler, should be attempted in future work, along with other approaches such as Empirical Bayes estimation to \\ approximate beta prior hyperparameters from observed data through the MLE or the Method of Moments. It is clear that frequentist and Bayesian inference holds much promise.
 
 
 \newpage
