--- a/References.bib
+++ b/References.bib
@@ -1,5 +1,5 @@
 @article {bartlett1992fins,
-	Title = {FINS (forensically informative nucleotide sequencing): a procedure for identifying the animal origin of biological specimens},
+	Title = {{FINS} (forensically informative nucleotide sequencing): {A} procedure for identifying the animal origin of biological specimens},
 	Author = {Bartlett, SE and Davidson, WS},
 	Number = {3},
 	Volume = {12},
@@ -23,7 +23,7 @@
 
 @article{candek2015dna,
 author = {\u{C}andek, Klemen and Kuntner, Matjaž},
-title = {{DNA} barcoding gap: reliable species identification over morphological and geographical scales},
+title = {{DNA} barcoding gap: {R}eliable species identification over morphological and geographical scales},
 journal = {Molecular Ecology Resources},
 volume = {15},
 number = {2},
@@ -42,6 +42,18 @@ doi = {10.18637/jss.v076.i01},
 author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B and Betancourt, M and Brubaker, MA and Guo, J and Li, P and Riddell, A}
 }
 
+@article{chen1999monte,
+  author    = {Ming-Hui Chen and Qi-Man Shao},
+  title     = {Monte {C}arlo Estimation of {B}ayesian Credible and {HPD} Intervals},
+  journal   = {Journal of Computational and Graphical Statistics},
+  volume    = {8},
+  number    = {1},
+  pages     = {69-92},
+  year      = {1999},
+  doi       = {10.1080/10618600.1999.10474802}
+}
+
+
 @article{collins2013seven,
 author = {Collins, R. A. and Cruickshank, R. H.},
 title = {The seven deadly sins of {DNA} barcoding},
@@ -51,6 +63,14 @@ number = {6},
 pages = {969-975},
 doi = {https://doi.org/10.1111/1755-0998.12046},
 year = {2013}
+}
+
+@book{gelman2014bayesian,
+  author = {Gelman, A and Carlin, JB. and Stern, HS. and Duncan, DB and Vehtari, A and Rubin, DB},
+  edition = {Third},
+  publisher = {Chapman and Hall/CRC},
+  title = {Bayesian Data Analysis},
+  year = {2014}
 }
 
 @article{gelman1992iterative,
@@ -66,7 +86,7 @@ year = {1992}
 
 @misc{gelman2020bayesian,
       title={Bayesian Workflow}, 
-      author={Andrew Gelman and Aki Vehtari and Daniel Simpson and Charles C. Margossian and Bob Carpenter and Yuling Yao and Lauren Kennedy and Jonah Gabry and Paul-Christian Bürkner and Martin Modrák},
+      author={Gelman, A and Vehtari, A and Simpson, D and Margossian, CC and Carpenter, B and Yao, Y and Kennedy, L and Gabry, J and Bürkner, P-C and Modrák, M},
       year={2020},
       eprint={2011.01808},
       archivePrefix={arXiv},
@@ -85,7 +105,7 @@ year = {1992}
 }
 
 @article{hebert2003barcoding,
-  title={Barcoding animal life: cytochrome c oxidase subunit 1 divergences among closely related species},
+  title={Barcoding animal life: {C}ytochrome c oxidase subunit 1 divergences among closely related species},
   author={Hebert, PDN and Ratnasingham, S and de Waard, JR},
   journal={Proceedings of the Royal Society of London B: Biological Sciences},
   volume={270},
@@ -117,7 +137,7 @@ year = {1992}
 }
 
 @article{hubert2015dna,
-  title={{DNA} Barcoding, species delineation and taxonomy: a historical perspective},
+  title={{DNA} Barcoding, species delineation and taxonomy: {A} historical perspective},
   author={Hubert, Nicolas and Hanner, Robert},
   journal={DNA Barcodes},
   volume={3},
@@ -125,6 +145,19 @@ year = {1992}
   year={2015},
   doi={10.1515/dna-2015-0006}
 }
+
+@article{jeffreys1946invariant,
+  author    = {Jeffreys, H},
+  title     = {An Invariant Form for the Prior Probability in Estimation Problems},
+  journal   = {Proceedings of the Royal Society of London. Series A, Mathematical and Physical Sciences},
+  volume    = {186},
+  number    = {1007},
+  pages     = {453--461},
+  year      = {1946},
+  publisher = {The Royal Society},
+  doi       = {10.1098/rspa.1946.0056},
+}
+
 
 
 @incollection{jukes1969evolution,
@@ -157,6 +190,18 @@ year = {1992}
   volume = {13},
   pages = {235--248}
 }
+
+@article{kingman1982genealogy,
+  author = {Kingman, JFC},
+  title = {On the genealogy of large populations},
+  journal = {Journal of Applied Probability},
+  year = {1982},
+  volume = {19},
+  number = {A},
+  pages = {27--43},
+  doi = {10.2307/3213548}
+}
+
 
 @article{liu2015simulation,
   author       = {Liu, Yuhong and Gelman, Andrew and Zheng, Tian},
@@ -192,7 +237,7 @@ year = {1992}
 }
 
 @article{meyer2005dna,
-  title={{DNA} barcoding: error rates based on comprehensive sampling},
+  title={{DNA} barcoding: {E}rror rates based on comprehensive sampling},
   author={Meyer, CP and Paulay, G},
   journal={PLOS Biology},
   volume={3},
@@ -205,7 +250,7 @@ year = {1992}
 
 @article{pentinsaari2016molecular,
   author = {Pentinsaari, Mikko and Salmela, Heli and Mutanen, Marko and et al.},
-  title = {Molecular evolution of a widely-adopted taxonomic marker (COI) across the animal tree of life},
+  title = {Molecular evolution of a widely-adopted taxonomic marker ({COI}) across the animal tree of life},
   journal = {Scientific Reports},
   volume = {6},
   pages = {35275},
@@ -254,6 +299,15 @@ address = {New York, NY},
 pages = {375--390},
 doi = {10.1007/978-1-0716-3581-0_24},
 }
+
+ @Manual{rcore2024language,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2024},
+    url = {https://www.R-project.org/},
+  }
 
 @article{rannala2003bayes,
   author = {Rannala, B and Yang, Z},
