--- a/References.bib
+++ b/References.bib
@@ -158,8 +158,6 @@ year = {1992}
   doi       = {10.1098/rspa.1946.0056},
 }
 
-
-
 @incollection{jukes1969evolution,
   title={Evolution of Protein Molecules},
   author={Jukes, TH. and Cantor, CR.},
@@ -246,6 +244,17 @@ year = {1992}
   year={2005},
   publisher={Public Library of Science},
   doi={https://doi.org/10.1371/journal.pbio.0030422}
+}
+
+@article{newcombe1998confidence,
+author = {Newcombe, Robert G.},
+title = {Two-sided confidence intervals for the single proportion: comparison of seven methods},
+journal = {Statistics in Medicine},
+volume = {17},
+number = {8},
+pages = {857-872},
+doi = {https://doi.org/10.1002/(SICI)1097-0258(19980430)17:8<857::AID-SIM777>3.0.CO;2-E},
+year = {1998}
 }
 
 @article{pentinsaari2016molecular,
